Fixing small layout issues on the listing page

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -16,7 +16,6 @@
 
 .footer-text {
     margin-top: 30px;
-    font-weight: 24px;
     font-weight: 500;
 }
 
